force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/PDF_Template_Field__c.object-meta.xml
<CustomObject>
    <description
  >Stores field placement information for PDF templates</description>
    <label>PDF Template Field</label>
    <nameField>
        <displayFormat>FLD-{00000}</displayFormat>
        <label>Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDF Template Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>