force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <defaultValue>'left'</defaultValue>
    <description>Text alignment for the field</description>
    <label>Alignment</label>
    <length>20</length>
    <type>Text</type>
</CustomField> 