force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Display label for the field</description>
    <label>Field Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>