force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Data type of the field</description>
    <label>Field Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>