force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <defaultValue>'Arial'</defaultValue>
    <description>Font family for the field text</description>
    <label>Font Family</label>
    <length>40</length>
    <type>Text</type>
</CustomField> 