force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Font_Size__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Font size for the field text</description>
    <label>Font Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>