force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/Format_Options__c.field-meta.xml
<CustomField>
    <fullName>Format_Options__c</fullName>
    <description>JSON string containing additional formatting options</description>
    <label>Format Options</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField> 