force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/PDF_Template__c.field-meta.xml
<CustomField>
    <fullName>PDF_Template__c</fullName>
    <description>Master-detail relationship to PDF Template</description>
    <label>PDF Template</label>
    <referenceTo>PDF_Template__c</referenceTo>
    <relationshipLabel>PDF Template Fields</relationshipLabel>
    <relationshipName>PDF_Template_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>