force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/X_Position__c.field-meta.xml
<CustomField>
    <fullName>X_Position__c</fullName>
    <description>X coordinate position on the page</description>
    <label>X Position</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 