force-app/main/UtilityComponents/pdfCreatorDragDrop/objects/PDF_Template_Field__c/fields/Y_Position__c.field-meta.xml
<CustomField>
    <fullName>Y_Position__c</fullName>
    <description>Y coordinate position on the page</description>
    <label>Y Position</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>